# dexter

./: Cargo.toml  README.md  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
lib/dexter_core/: application.rs  application_state.rs  argon.rs  core.rs  lib.rs
lib/dexter_core/commons/: bounds.rs
lib/dexter_core/traits/secrets/: hasher.rs  mod.rs  password.rs
lib/dexter_core/traits/store/: mod.rs
lib/dexter_core/traits/ui/: mod.rs
lib/dexter_core/traits/ui/devices/input/: keypad.rs
scripts/: flash.sh  run-wokwi.sh
src/: application.rs  main.rs
src/commons/: bounds.rs  logger.rs  mod.rs
src/dexter_core/: application.rs  mod.rs
src/dexter_core/common/: mod.rs
src/dexter_core/hash/: mod.rs
src/dexter_core/hasher/: argon_hasher.rs  hasher.rs  mod.rs  no_hasher.rs
src/dexter_core/store/: mod.rs  no_store.rs  store.rs
src/dexter_core/traits/: mod.rs
src/dexter_core/traits/store/: mod.rs
src/dexter_core/traits/ui/: mod.rs
src/implementations/: core.rs  mod.rs
src/implementations/shims/: mod.rs  no_store.rs  store.rs
src/implementations/shims/hasher/: mod.rs  shim_hasher.rs
src/ui/: mod.rs  ui.md
src/ui/contracts/: mod.rs
src/ui/contracts/devices/input/: keypad.rs
src/ui/contracts/input/: keypad.rs
src/ui/contracts/output/: mod.rs  sfi.rs
src/ui/contracts/stateful_devices/input/: mod.rs  stateful_keypad.rs
src/ui/implementations/: mod.rs
src/ui/implementations/shims/: mod.rs
src/ui/keypad/: gpio_keypad.rs  keypad.rs  mod.rs
src/ui/progress/: gpio_progress_bar.rs  mod.rs  progress_bar.rs
src/ui/success_failure_indicator/: gpio_sfi.rs  mod.rs  sfi.rs  success_failure_indicator.rs
(+7 files in other folders)
